--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.5
   get: ^4.6.5
   flutter_secure_storage: ^6.0.0
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
