--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter    
 
   cupertino_icons: ^1.0.2
   http: ^0.13.5
@@ -18,7 +20,8 @@ dependencies:
   get: ^4.6.5
   flutter_secure_storage: ^6.0.0
   carousel_slider: ^4.1.1
-
+  intl: ^0.17.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
