--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  mockito: ^5.3.1
+  mockito: ^5.3.2
   test: ^1.21.4
   faker: ^2.0.0
   build_runner: ^2.2.1
+  network_image_mock: ^2.1.1
 
 flutter:
   uses-material-design: true
